# bzfs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.md  README_bzfs_cron.md  README_bzfs_joblauncher.md  README_bzfs_jobrunner.md  README_bzfs_jobscheduler.md  README_markdown_from_argparse.md  SECURITY.md  coverage.sh  getting_started_bzfs_joblauncher.md  prd.md  preinstall_dev.sh  pyproject.toml  requirements-dev.txt  run_quietly.sh  setup.py  test.sh  test_host.sh  update_lockfiles.sh  update_readme.sh  wbackup-zfs
.agents/skills/bzfs-experimental-script-generator/: SKILL.md
.agents/skills/bzfs-experimental-script-generator/assets/: skill_creation_prompt.md
.agents/skills/bzfs-experimental-script-generator/references/: script_templates.md
.agents/skills/bzfs-improve-code-coverage/: SKILL.md
.agents/skills/experimental-bzfs-script-generator/: SKILL.md
.agents/skills/experimental-bzfs-script-generator/assets/: skill_creation_prompt.md
.agents/skills/experimental-bzfs-script-generator/references/: safety_and_semantics.md  script_templates.md  simulation_examples.md  task_recipes.md
.agents/skills/improve-code-coverage/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github-workflow-scripts/: add-apt-repository-with-retries.sh  apt-get-update-with-retries.sh  generate_badges.py  install_almalinux9.sh  install_almalinux_9.sh  install_ubuntu_22_04_zfs_0_8_x.sh  install_ubuntu_24_04_pv_fr.sh  lima_mesh_setup.sh  lima_testbed.sh  lima_ubuntu_24_04.sh  make_release.sh  test_freebsd_13_3.sh  test_freebsd_14_1.sh  test_solaris_11_4.sh  test_solaris_14_1.sh  test_ubuntu_24_04_lima.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/common/: action.yml
.github/actions/coverage-upload/: action.yml
.github/actions/pre-commit/: action.yml
.github/actions/print-versions/: action.yml
.github/actions/test-almalinux-lima/: action.yml
.github/workflows/: dependabot-lockfiles.yml  python-app.yml  python-publish.yml  python-release-testpypi.yml  python-release.yml
.github/workflows/common/: action.yml
.github/workflows/coverage-upload/: action.yml
bash_completion.d/: bzfs-shell-completion  shell-completion-generator.py  shell-completion-generator.sh
bash_completion_d/: bzfs-shell-completion  shell-completion-generator.py  shell_completion_generator.py
bzfs/: bzfs  bzfs.py  bzfs_cron.py  bzfs_jobrunner  bzfs_jobrunner.py  bzfs_jobscheduler  bzfs_jobscheduler.py  bzfs_utils.py
bzfs_docs/: bzfs_replication_grafana.json  misc_examples.md  system_overview.md  update_readme.py
bzfs_gh/: README.md  submit_gh_workflow.py
bzfs_main/: actions.py  argparse_actions.py  argparse_cli.py  bzfs  bzfs.py  bzfs_joblauncher  bzfs_joblauncher.py  bzfs_jobrunner  bzfs_jobrunner.py  check_range.py  compare_snapshot_lists.py  configuration.py  connection.py  connection_lease.py  detect.py  filter.py  incremental_send_steps.py  loggers.py  parallel_batch_cmd.py  parallel_engine.py  parallel_engine_wrapper.py  parallel_iterator.py  parallel_tasktree.py  parallel_tasktree_policy.py  period_anchors.py  progress_reporter.py  prometheus_exporter.py  replication.py  retries.py  retry.py  snapshot_cache.py  utils.py
bzfs_main/util/: check_range.py  connection.py  connection_lease.py  generate_badge.py  markdown_from_argparse.py  parallel_iterator.py  parallel_tasktree.py  parallel_tasktree_policy.py  retry.py  update_readme_from_argparse.py  utils.py
bzfs_testbed/: Dockerfile  Dockerfile.ubuntu  Dockerfile.ubuntu-24.04  README.md  bzfs_job_testbed.py  docker-compose.yml  docker_create.sh  docker_entrypoint.sh  docker_example.sh  docker_image.sh  docker_run_example.sh  lima_mesh.sh  lima_testbed.sh  lima_ubuntu.sh  lima_ubuntu_24_04.sh  lima_vm.sh
bzfs_testbed/docker/: Dockerfile  README.md  cronjob_example  docker_entrypoint.sh  docker_image.sh  docker_run_example.sh
bzfs_testbed_docker/: Dockerfile  README.md  cronjob_example  docker_entrypoint.sh  docker_image.sh  docker_run_example.sh
bzfs_testdocker/: Dockerfile  cronjob_example  docker-compose.yml  docker_entrypoint.sh  docker_run_example.sh  runjob_example.cron
bzfs_tests/: abstract_test.py  abstract_testcase.py  bzfs_cron_example.py  bzfs_cronjob_example.py  bzfs_job_example.py  bzfs_job_example_multisrc.py  bzfs_job_testbed.py  bzfs_joblauncher_example.yaml  bzfs_log_config.json  generate_badge.py  prune_bookmarks.py  test_all.py  test_argparse_actions.py  test_bzfs.py  test_bzfs_units.py  test_compare_snapshot_lists.py  test_configuration.py  test_connection.py  test_connection_lease.py  test_detect.py  test_filter.py  test_generate_badge.py  test_generate_badges.py  test_incremental_send_steps.py  test_integrations.py  test_interner.py  test_joblauncher.py  test_jobrunner.py  test_jobrunner_units.py  test_loggers.py  test_markdown_from_argparse.py  test_parallel_batch_cmd.py  test_parallel_engine.py  test_parallel_iterator.py  test_parallel_tasktree.py  test_parallel_tasktree_policy.py  test_period_anchors.py  test_progress_reporter.py  test_prometheus_exporter.py  test_replication.py  (+16 more)
bzfs_tests/itest/: ibase.py  test_incremental_send_steps.py  test_integrations.py  test_lima_ubuntu_24_04_sh.py  test_lima_ubuntu_sh.py  test_lima_vm_sh.py  test_local.py  test_remote.py  test_sanitize_recv_opts_for_dataset_type.py  test_smoke_adhoc.py  test_ssh.py  test_test_ubuntu_24_04_lima_sh.py
test/: log_config.json  prune_bookmarks.py  test_bzfs.py  test_wbackup_zfs.py  test_wbackup_zfs.sh  update-readme.py  zfs_util.py
tests/: log_config.json  test_bzfs.py  test_integrations.py  test_units.py  update-readme.py  update_readme.py  zfs_util.py
tmp.htmlcov/: class_index.html  function_index.html  index.html  status.json  z_ecf8c62bbd97de64_bzfs_jobrunner_py.html  z_ecf8c62bbd97de64_bzfs_py.html  z_ecf8c62bbd97de64_utils_py.html
tools/: install_npm_package.py  install_shellcheck.py  install_uv.sh  prettier  shellcheck
wbackup_zfs/: wbackup_zfs.py
