[build-system]
requires = ["setuptools >= 75.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bzfs"
version = "1.12.0.dev0"

description = """
bzfs is a backup command line tool that reliably replicates ZFS snapshots from a (local or remote) source ZFS dataset \
(ZFS filesystem or ZFS volume) and its descendant datasets to a (local or remote) destination ZFS dataset to make the \
destination dataset a recursively synchronized copy of the source dataset, using zfs send/receive/rollback/destroy and \
ssh tunnel as directed. bzfs can be used to incrementally replicate all ZFS snapshots since the most recent common \
snapshot from source to destination."""

authors = [
  {name = "Wolfgang Hoschek", email = "wolfgang.hoschek@mac.com"},
]
maintainers = [
  {name = "Wolfgang Hoschek", email = "wolfgang.hoschek@mac.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ZFS", "snapshot", "replication", "backup", "synchronization"]
license = {text = "Apache License (2.0)"}
requires-python = ">= 3.8"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/whoschek/bzfs"
Repository = "https://github.com/whoschek/bzfs"
Tests = "https://github.com/whoschek/bzfs/actions/workflows/python-app.yml?query=event%3Aschedule"
Coverage = "https://whoschek.github.io/bzfs/coverage"
Issues = "https://github.com/whoschek/bzfs/issues"
Changelog = "https://github.com/whoschek/bzfs/blob/main/CHANGELOG.md"
Distribution = "https://pypi.org/project/bzfs"

[project.optional-dependencies]
dev = [  # for development only
  "argparse-manpage==4.6",          # see https://github.com/praiskup/argparse-manpage
  # "pandoc", # instead use this for v3.5: sudo apt-get -y install pandoc (Ubuntu) or brew install pandoc (OSX)
  "genbadge[coverage]==1.1.2",      # see https://smarie.github.io/python-genbadge/
  "commitizen==4.8.3",              # see https://github.com/commitizen-tools/commitizen
  "pre-commit==4.2",                # see https://github.com/pre-commit/pre-commit
  "black==25.1",                    # see https://github.com/psf/black
  "ruff==0.12.7",                   # see https://github.com/astral-sh/ruff
  "coverage>=7.6",                  # see https://github.com/nedbat/coveragepy
  "mypy==1.16.1",                   # see https://github.com/python/mypy
  "docformatter==1.7.7",            # see https://github.com/PyCQA/docformatter
  "mdformat==0.7.22",               # see https://github.com/hukkin/mdformat
  "codespell==2.4.1",               # see https://github.com/codespell-project/codespell
  "pylint==3.3.7",                  # see https://github.com/pylint-dev/pylint
  "pyrefly==0.26.1",                # see https://github.com/facebook/pyrefly
  "pytype==2024.10.11",             # see https://github.com/google/pytype
  "ast-grep-cli==0.39.2",           # see https://github.com/ast-grep/ast-grep
  "rope==1.14.0",                   # see https://github.com/python-rope/rope
]
# Example that installs the optional python development dependencies (see above) into a venv:
# cd ~/devel/bzfs
# rm -rf venv
# python3 -m venv venv                # Create a Python virtual environment
# source venv/bin/activate            # Activate it
# pip install -e '.[dev]'             # Install all development dependencies
# pre-commit install --install-hooks  # Ensure Linters and Formatters run on every commit
# pip list --not-required

[project.scripts]
bzfs = "bzfs_main.bzfs:main"
bzfs_jobrunner = "bzfs_main.bzfs_jobrunner:main"
bzfs-test = "bzfs_tests.test_all:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["bzfs_docs", "bash_completion_d"]

[tool.setuptools.package-data]
bzfs_tests = ["*.json"]

[tool.commitizen]  # release mgmt via https://github.com/commitizen-tools/commitizen + https://www.conventionalcommits.org
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = ["bzfs_main/argparse_cli.py:__version__"]
tag_format = "v$version"
bump_message = "build(release): bump version to $new_version"
update_changelog_on_bump = false

[tool.coverage.run]  # see https://coverage.readthedocs.io/
branch = true
include = ["bzfs_main/*.py"]
omit = ["bzfs_tests/*.py", "*/__init__.py"]

[tool.docformatter]         # auto-format Python docstrings to follow PEP 257 and wrap them to a specific line length
wrap-summaries = 125        # summary / one-liner length; see https://docformatter.readthedocs.io/en/latest/usage.html
wrap-descriptions = 125     # long-description line length
force-wrap = false          # force descriptions to be wrapped even if it may result in a mess?
in-place = true             # let pre-commit make changes to files instead of printing diffs

[tool.black]
line_length = 125
target_version = ["py38", "py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
target-version = "py38"
line-length = 125
fix = true            # allow safe auto-fixes?
unsafe-fixes = false  # allow FA100 and similar "unsafe" auto-fixes?
show-fixes = true     # display which rule triggered an auto-fix
exclude = [   # toggles to exclude overly strict `ruff` checks of these Python source code directories in development mode:
#    "bzfs_main",
#    "bzfs_tests",
#    ".github-workflow-scripts",
]

[tool.ruff.lint]
select = [      # see https://docs.astral.sh/ruff/rules/
    "A",        # builtins
    "ASYNC",    # flake8-async
    "B",        # bugbear
    "C4",       # flake8-comprehensions
    "D100", "D101", "D102", "D103", "D106", "D200", "D206", "D403", "D404", "D414", "D418", "D419",  # pydocstyle
    "E",        # pycodestyle error
    "EXE",      # shebang
    "F",        # pyflakes
    "FA",       # forward annotations
    "FAST",     # fastAPI
    "G",        # flake8-logging-format
    "I",        # isort: auto-sort and auto-format imports
    "ICN",      # flake8-import-conventions
    "INP",      # flake8-no-pep420
    "ISC",      # flake8-implicit-str-concat
    "LOG",      # flake8-logging
    "N",        # pep8-naming, snake_case
    "PERF402",  # use list or list.copy to create a copy of a list
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PLC",      # pylint-convention
    "PLE",      # pylint-error
    "PLR0402",  # pylint-refactor: use from {module} import {name} in lieu of alias
    "PLR1711",  # pylint-refactor: useless return statement at end of function
    "PLR1722",  # pylint-refactor: use sys.exit() instead of exit()
    "PLR1730",  # pylint-refactor: replace if statement with min() or max() if possible
    "PLR1733",  # pylint-refactor: unnecessary lookup of dictionary value by key
    "PLR1736",  # pylint-refactor: list index lookup in enumerate() loop
    "PLR2044",  # pylint-refactor: line with empty comment
    "PLW",      # pylint-warning
    "RET501", "RET502", "RET503",  # flake8-return
    "RUF",      # ruff-specifc rules
    "S",        # bandit
    "SIM115",   # flake8-simplify: Use a context manager for opening files
    "SIM300",   # flake8-simplify: yoda condition detected
    "SIM401",   # flake8-simplify: use dict.get(x, default) instead of if statement
    "SIM910",   # flake8-simplify: dict.get(x, None)
    "SIM911",   # flake8-simplify: use dict.items() instead of zip()
    "SLF",      # private member accessed
    "T100",     # check for debugger imports and breakpoint() calls
    "TC001", "TC004", "TC005", "TC007","TC008", "TC010",  # flake8-type-checking conditions
    "TID",      # flake8-tidy-imports
    "TRY",      # tryceratops raises
    "TRY201",   # use `raise` without specifying exception name
#    "UP006",   # pyupgrade
#    "UP007",   # pyupgrade
#    "UP045",   # pyupgrade: use X | None for type annotations with python >= 3.10
    "YTT",      # flake8-2020
]
preview = true                 # enable preview rules
explicit-preview-rules = true  # only opt into specific preview rules via extend-select whitelist (no blank opt-in)
extend-select = [
    "CPY001",   # copyright
    "PLR0202",  # no-classmethod-decorator
    "PLR0203",  # no-staticmethod-decorator
]
ignore = [  # toggles to exclude overly strict `ruff` checks:
    "E501",     # line too long (defer autofix to `black`)
    "G004",     # logging statement uses f-string
    "PLC0415",  # `import` should be at the top-level of a file
    "PLW0108",  # lambda may be unnecessary; consider inlining inner function
    "PLW1510",  # subprocess-run
    "PLW2901",  # redefined-loop-name
    "RUF005",   # collection-literal-concatenation
    "S101",     # use of assert detected (harmless)
    "S404",     # use of subprocess module (this use is intended)
    "S603",     # use of subprocess without shell=True (this use is intended)
    "TRY003",   # avoid specifying long messages outside the exception class
    "TRY300",   # consider moving this statement to an else block
    "TRY301",   # abstract raise to an inner function
    "TRY400",   # use logging.exception instead of logging.error
]

[tool.ruff.lint.per-file-ignores]
"bzfs_tests/**/*" = [
    "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # pydocstyle: ignore all D rules except the ones we want
    "PERF402",  # use list or list.copy to create a copy of a list
    "PGH003",   # pygrep-hooks blanket-type-ignore
    "PLW0603",  # global-statement
    "S",        # bandit
    "SLF",      # private member accessed
]
"bash_completion_d/**/*" = [
    "SLF",      # private member accessed
]
".github-workflow-scripts/**/*" = [
    "N999",     # invalid-module-name
]
"**/__init__.py" = [
    "CPY",      # copyright
]
"**/check_range.py" = [
    "CPY",      # copyright
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = """Copyright (\\(c\\) )?\\d{4}([-,]\\d{4})* Wolfgang Hoschek AT mac DOT com\
\\s+#\\s+# Licensed under the Apache License, Version 2\\.0"""

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-import-conventions]  # ICN
# forbid-aliased-import-of-modules, e.g. forbids 'import bzfs_main.bzfs as foo'
aliases = { "bzfs_main.bzfs" = "bzfs", "bzfs_main.bzfs_jobrunner" = "bzfs_jobrunner" }

# forbid-aliased-import-of-attributes, e.g. forbids 'from bzfs_main import bzfs as foo'
extend-aliases = { "bzfs_main.bzfs" = "bzfs", "bzfs_main.bzfs_jobrunner" = "bzfs_jobrunner" }

[tool.ruff.lint.isort]
known-first-party = ["bzfs_*"]
no-lines-before = ["standard-library"]  # no blank line before std-lib
lines-between-types = 0  # keep `import ...` and `from ...` tight
split-on-trailing-comma = true  # retain multi-line blocks when a trailing comma is present

[tool.ruff.lint.pydocstyle]
ignore-decorators = ["typing.overload"]  # ignore docstrings for functions or methods decorated w/ the specified decorators.

[tool.pylint."MESSAGES CONTROL"]  # see https://pylint.readthedocs.io/en/latest/user_guide/messages/messages_overview.html
disable = ["all"]        # turn all checks off ...
enable  = ["R0401"]      # ...then re-enable just the detection of cyclic imports

[tool.mypy]
python_version = "3.8"
strict = true
disallow_any_generics = false
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true
#ignore_errors = true  #  big toggle to exclude all `mypy` checks in development mode
disable_error_code = [  # toggles to exclude overly strict `mypy` checks in development mode:
#    see https://mypy.readthedocs.io/en/stable/error_code_list.html#error-code-list
#    and https://mypy.readthedocs.io/en/stable/error_code_list2.html
#    "arg-type",
#    "assignment",
#    "attr-defined",
#    "call-arg",
#    "call-overload",
#    "exit-return",
#    "func-returns-value",
#    "index",
#    "misc",
#    "name-defined",
#    "no-redef",
#    "operator",
#    "return",
#    "return-value",
#    "str-bytes-safe",
#    "type-arg",
#    "type-var",
#    "union-attr",
#    "var-annotated",
]

[tool.pytype]
python_version = "3.11"
inputs = [
    "bzfs_main",
]
disable = [  # see https://google.github.io/pytype/errors.html
]
keep_going = true
jobs = "auto"

[tool.pyrefly]
python-version = "3.8"
#untyped-def-behavior = "check-and-infer-return-type"
#project-includes = ["**/bzfs_*/**"]
#project-excludes = ["**/tests/**", "**/.venv/**"]

[tool.codespell]  # Auto-fix typos
skip = "bzfs_tests/test_*.py,venv*"
write-changes = true                      # let pre-commit make changes to files instead of printing diffs
interactive = 0                           # no interactivity on making changes to files
ignore-words-list = [                     # project-specific words that should not be treated as typos
    "cach",
    "grup",
    "mut",
]
